[gd_scene load_steps=7 format=3 uid="uid://dg3j0dx8qp3m6"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_acbgs"]
[ext_resource type="FontFile" uid="uid://cduo3hndy60wv" path="res://fonts/arcade_classic.TTF" id="2_hvgjt"]

[sub_resource type="Animation" id="Animation_211rs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TotalDistance:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.898039, 0.898039, 0.898039, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PerfectLabel:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.898039, 0.898039, 0.898039, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GreatLabel:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.898039, 0.898039, 0.898039, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MissedLabel:theme_override_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.898039, 0.898039, 0.898039, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MaxComboLabel:theme_override_colors/font_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.898039, 0.898039, 0.898039, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GameOverText:theme_override_colors/font_color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.75339, 2.38247e-06, 5.77569e-07, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GameOverText:theme_override_colors/font_shadow_color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_tfncc"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.643137)]
}

[sub_resource type="Animation" id="Animation_if5ka"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.643137), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TotalDistance:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.898039, 0.898039, 0.898039, 1), Color(0.898039, 0.898039, 0.898039, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PerfectLabel:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.898039, 0.898039, 0.898039, 1), Color(0.898039, 0.898039, 0.898039, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GreatLabel:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.898039, 0.898039, 0.898039, 1), Color(0.898039, 0.898039, 0.898039, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MissedLabel:theme_override_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.898039, 0.898039, 0.898039, 1), Color(0.898039, 0.898039, 0.898039, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MaxComboLabel:theme_override_colors/font_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.898039, 0.898039, 0.898039, 1), Color(0.898039, 0.898039, 0.898039, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GameOverText:theme_override_colors/font_color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.75339, 2.38247e-06, 5.77569e-07, 1), Color(0.752941, 0, 0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GameOverText:theme_override_colors/font_shadow_color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tujeb"]
_data = {
"RESET": SubResource("Animation_211rs"),
"fade_in": SubResource("Animation_tfncc"),
"fade_out": SubResource("Animation_if5ka")
}

[node name="GameOver" type="Node"]
script = ExtResource("1_acbgs")

[node name="BlackFade" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 1296.0
offset_bottom = 736.0
color = Color(0, 0, 0, 0)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tujeb")
}

[node name="GameOverText" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 128.0
offset_right = 136.0
offset_bottom = 189.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.75339, 2.38247e-06, 5.77569e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_hvgjt")
theme_override_font_sizes/font_size = 60
text = "GAME OVER"

[node name="Timer" type="Timer" parent="."]

[node name="MenuButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.48125
anchor_top = 0.494444
anchor_right = 0.520312
anchor_bottom = 0.509722
offset_left = -40.0
offset_top = 156.0
offset_right = 39.0
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_pressed_color = Color(0.603721, 0, 0.0132053, 1)
theme_override_colors/font_color = Color(0.898039, 0.898039, 0.898039, 1)
theme_override_fonts/font = ExtResource("2_hvgjt")
theme_override_font_sizes/font_size = 25
text = "Main Menu
"

[node name="RestartButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.48125
anchor_top = 0.494444
anchor_right = 0.520312
anchor_bottom = 0.509722
offset_left = -40.0
offset_top = 92.0003
offset_right = 39.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_pressed_color = Color(0.603721, 0, 0.0132053, 1)
theme_override_colors/font_color = Color(0.898039, 0.898039, 0.898039, 1)
theme_override_fonts/font = ExtResource("2_hvgjt")
theme_override_font_sizes/font_size = 25
text = "Restart"

[node name="TotalDistance" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -138.0
offset_right = 367.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.898039, 0.898039, 0.898039, 1)
theme_override_fonts/font = ExtResource("2_hvgjt")
theme_override_font_sizes/font_size = 25
text = "Total Distance: m"
vertical_alignment = 1

[node name="PerfectLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -97.0
offset_right = 279.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.898039, 0.898039, 0.898039, 1)
theme_override_fonts/font = ExtResource("2_hvgjt")
theme_override_font_sizes/font_size = 25
text = "Perfect x"
vertical_alignment = 1

[node name="GreatLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -62.0
offset_right = 311.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.898039, 0.898039, 0.898039, 1)
theme_override_fonts/font = ExtResource("2_hvgjt")
theme_override_font_sizes/font_size = 25
text = "Great x"
vertical_alignment = 1

[node name="MissedLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -26.0
offset_right = 327.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.898039, 0.898039, 0.898039, 1)
theme_override_fonts/font = ExtResource("2_hvgjt")
theme_override_font_sizes/font_size = 25
text = "Missed x"
vertical_alignment = 1

[node name="MaxComboLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = 6.0
offset_right = 327.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.898039, 0.898039, 0.898039, 1)
theme_override_fonts/font = ExtResource("2_hvgjt")
theme_override_font_sizes/font_size = 25
text = "Max Combo x"
vertical_alignment = 1

[node name="MenuTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="MenuTimer" to="." method="_on_menu_timer_timeout"]
